# gnr8

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  RELEASE-READINESS-V2.md  action.yml  llms-full.txt  llms.txt  rust-toolchain.toml
.github/workflows/: ci.yml  generated-sdk-check.yml  release-dry-run.yml  release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-REVIEW.md  v3.0-ROADMAP.md
.planning/phases/01-foundation-and-fixtures/: 01-01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/01-language-neutral-ir-facts-contract-fixtures/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-go-analysis-and-api-graph/: 02-RESEARCH.md  02-VALIDATION.md
.planning/phases/02-python-source-pyextract/: 02-02-PLAN.md  02-03-PLAN.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-python-target-pysdk/: 03-PATTERNS.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  TARGET-API.md
crates/gnr8/: Cargo.toml
crates/gnr8-core/: Cargo.toml
crates/gnr8-core/src/: error.rs  lib.rs  resource.rs
crates/gnr8-core/src/analyze/: facts.rs  helper.rs  mod.rs
crates/gnr8-core/src/config/: mod.rs
crates/gnr8-core/src/diagnostics/: mod.rs
crates/gnr8-core/src/gosdk/: bundle.rs  emit.rs  gofmt.rs  mod.rs
crates/gnr8-core/src/graph/: mod.rs
crates/gnr8-core/src/lifecycle/: mod.rs
crates/gnr8-core/src/lower/: json.rs  mod.rs  model.rs  yaml.rs
crates/gnr8-core/src/manifest/: mod.rs
crates/gnr8-core/src/pysdk/: bundle.rs  emit.rs  mod.rs
crates/gnr8-core/src/runner/: mod.rs
crates/gnr8-core/src/sdk/: builtins.rs  bundle.rs  compat.rs  docs.rs  emit.rs  emit_common.rs  go.rs  gofmt.rs  layout.rs  mod.rs  model.rs  model_style.rs  openapi_compat.rs  openapi_source.rs  profile.rs  surface.rs  typescript.rs
crates/gnr8-core/src/tssdk/: bundle.rs  emit.rs  mod.rs
crates/gnr8-core/src/workspace/: mod.rs
crates/gnr8-core/tests/: determinism.rs  gin_contract_regression.rs  lifecycle.rs  pysdk_compile.rs  request_parameter_wire.rs  sdk_compile.rs  sdk_lint.rs  sdk_pipeline.rs  sdk_surface_flexibility_e2e.rs  snapshot_diagnostics.rs  snapshot_fastapi_graph.rs  snapshot_fastapi_openapi.rs  snapshot_flask_graph.rs  snapshot_flask_openapi.rs  snapshot_graph.rs  snapshot_nestjs_graph.rs  snapshot_nestjs_openapi.rs  snapshot_openapi.rs  snapshot_sdk.rs  tssdk_compile.rs  tssdk_request_wire.rs
crates/gnr8-core/tests/nestjs_toolchain/: mod.rs
crates/gnr8-core/tests/snapshots/: snapshot_diagnostics__goalservice_diagnostics.snap  snapshot_fastapi_graph__fastapi_graph.snap  snapshot_fastapi_openapi__fastapi_openapi.snap  snapshot_flask_graph__flask_graph.snap  snapshot_flask_openapi__flask_openapi.snap  snapshot_graph__goalservice_graph.snap  snapshot_nestjs_graph__nestjs_graph.snap  snapshot_nestjs_openapi__nestjs_openapi.snap  snapshot_openapi__goalservice_openapi.snap  snapshot_sdk__goalservice_sdk.snap
crates/gnr8/src/: child.rs  cli.rs  doctor.rs  main.rs  render.rs  watch.rs
crates/gnr8/tests/: compat_cli.rs  generate_e2e.rs  watch_smoke.rs
docs/: AGENT-USAGE.md  RELEASE.md  USAGE.md  code-as-config.md  deep-rust-logic-review.md  demo.md  evidence.md  extensibility.md  milestone-v2-multi-language.md  poc-contract.md  sdk-file-layout.md  sdk-generation-performance.md  sdk-model.md  sdk-shape-flexibility-research.md
docs/agents/: index.md
docs/cli/: commands.md
docs/diagnostics/: reference.md
docs/extraction/: sources.md
docs/guides/: brownfield-openapi-generator-migration.md  go-gin-to-python-typescript.md  nestjs-to-typescript-sdk.md  python-apis-to-python-sdk.md
docs/openapi/: compatibility.md  generation.md
docs/operations/: artifacts-and-ci.md
docs/pipeline/: configuration.md  transforms.md
docs/reference/: public-api.md
docs/sdk/: compatibility.md  generation.md
examples/bookstore/: .gitignore  README.md  go.mod  main.go  models.go
examples/fastapi-bookstore/: README.md
examples/flask-bookstore/: README.md
examples/nestjs-bookstore/: README.md
examples/taskflow/: .gitignore  README.md  go.mod  main.go  models.go
fixtures/brownfield-openapi/: common.yaml  openapi30.yaml  openapi31.yaml  swagger20.yaml
fixtures/fastapi-bookstore/: requirements.txt
fixtures/flask-bookstore/: requirements.txt
fixtures/gin-contract-regression/: app.go  go.mod
fixtures/goalservice/: go.mod  go.sum
fixtures/nestjs-bookstore/: package.json
goextract/: go.mod  main.go  main_test.go
pyextract/: __init__.py  __main__.py  diagnostics.py  facts.py  load.py  routes.py  schemas.py  symtab.py  types.py
pyextract/tests/: __init__.py  test_facts.py  test_fastapi_golden.py  test_flask_golden.py  test_flask_routes.py  test_load.py  test_routes.py  test_routes_unit.py  test_schemas_unit.py  test_symtab.py  test_types.py
scripts/: bench.sh  bump-workspace-version.py  install.sh  package-release.sh  publish-crates.sh  release-local-check.sh  resolve-action-version.sh  sha256_file.py  smoke-release-archive.sh  test-action-version.sh
thoughts/: ARCHITECTURE.md  DECISION.md  FEATURE.md  ROADMAP.md
thoughts/research/: README.md  adoption-support.md  code-as-config-and-ux.md  generation-lifecycle.md  go-gin-native-sdk-replacement.md  go-openapi-tooling.md  go-static-analysis.md  multi-language-sources-and-targets.md  native-go-to-openapi.md  openapi-baseline.md  sdk-generation-and-structure.md  speed-and-incrementality.md  validation-plan.md
tsextract/: diagnostics.js  facts.js  index.js  load.js  package-lock.json  package.json  probe.js  routes.js  schemas.js  ts.js  types.js
tsextract/tests/: edge-cases.test.js  golden.test.js  lines.test.js  route-edges.test.js  routes.test.js  schemas.test.js  types.test.js
(+218 files in other folders)
