# gnr8 — Cargo workspace root.
# Single source of truth for shared lint policy (D-08) and dependency versions
# (verified 2026-06-24 against the crates.io sparse index — see 01-RESEARCH.md).
[workspace]
members = ["crates/gnr8-core", "crates/gnr8"]
resolver = "2"

[workspace.package]
version = "0.1.18"
edition = "2021"        # D-08
rust-version = "1.85"   # MSRV floor: clap 4.6 requires 1.85
license = "MIT"         # matches repo LICENSE
readme = "README.md"
repository = "https://github.com/emilwareus/gnr8"
homepage = "https://github.com/emilwareus/gnr8"
documentation = "https://docs.rs/gnr8"
description = "Code-first API extraction to OpenAPI 3.1 and generated client SDKs"
keywords = ["openapi", "sdk", "codegen", "agents", "api"]
categories = ["development-tools"]

# Shared lint policy (rust-best-practices skill ch.2 + D-08).
# `priority` resolves conflicts: a lower priority is overridden by a higher one;
# group-level lints use priority -1 so individual lints below them win.
[workspace.lints.rust]
unsafe_code = "forbid"      # T-01-02: no unsafe memory in gnr8 internals
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# RUST-04 / T-01-03 enforcement: ban panicking paths in production code.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"               # surface scaffolding TODOs without failing the build

[workspace.dependencies]
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"           # NOTE: v2, not v1
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noyalib = "0.0.8"
toml = "0.8"
insta = { version = "1.48", features = ["yaml"] }
# Phase-4 lifecycle/watch runtime crates — versions verified 2026-06-24 against the
# crates.io sparse index (04-RESEARCH.md). Pinned here as the single source of truth;
# member crates reference them with `{ workspace = true }`. Stable releases ONLY — the
# notify 9.0 / debouncer 0.8 release candidates are deliberately NOT used.
blake3 = "1.8"                  # content hashing for the ownership manifest (consumed in 04-02)
notify-debouncer-full = "0.7"   # debounced FS watcher for `gnr8 watch` (consumed in 04-03)
ctrlc = "3.5"                   # graceful Ctrl-C → AtomicBool for the watch loop (consumed in 04-03;
                                # the FSEvents backend suppresses the default SIGINT disposition, so the
                                # std-only approach proved insufficient — RESEARCH A5 sanctioned fallback)
gnr8 = { path = "crates/gnr8-core", version = "0.1.18" }
