[package]
name = "gnr8"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "gnr8"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
gnr8-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }       # derive Serialize on the CLI Report type for --json output
serde_json = { workspace = true }
anyhow = { workspace = true }   # anyhow ONLY here, never in gnr8-core (D-09)
notify-debouncer-full = { workspace = true } # debounced FS watcher for `gnr8 watch` (binary boundary, D-09)
ctrlc = { workspace = true } # graceful Ctrl-C → AtomicBool stop flag for the watch loop (binary boundary)
